Fix horizontal scrollbar.

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ $green: rgb(133, 153, 0);
 body {
     background-color: rgb(253, 246, 227);
     color: rgb(7, 54, 66);
+    margin-left: 0;
+    margin-right: 0;
 }
 
 pre {
@@ -36,8 +38,6 @@ header {
     color: rgb(203, 75, 22);
     background: rgb(7, 54, 66);
     padding: 1em 0.5em 0.5em 1em;
-    margin-left: -1em;
-    margin-right: -1em;
     margin-top: -1em;
 }
 
